Fixed an issue where the error message box extended bigger than the decive width on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@ body {
   display: none;
   flex-direction: column;
   margin: 5px auto;
-  width: 450px;
+  width: 80vw;
   height: 100px;
   background-color: rgba(255, 0, 0, 0.5);
   border: 2px solid red;
